Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -660,22 +660,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "42"
+       "int"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "type(name"
+    "type(name)"
    ]
   },
   {
